# ccunits

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  INSTALL.md  LICENSE  README.md  conanfile.txt  main.cpp
cmake/: CompilerOptions.cmake  Conan.cmake
conan/profiles/: gcc12-cpp20  gcc14-cpp20
examples/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Units.h
tests/: CMakeLists.txt  ConversionTests.cpp  MathTests.cpp  OperatorTests.cpp  RelationTests.cpp  UserDefinitions.cpp  test_utils.h
